package dev.mr3.sb.model;

/**
 * Body part options used when reporting an injury.
 * Keywords: enum, body-part, injury
 */
public enum BodyPart {
    THIGH,
    HAMSTRING,
    CALF,
    ANKLE,
    KNEE,
    FOOT,
    SHIN,
    ARM,
    LEG,
    WRIST,
    SHOULDER,
    ELBOW,
    ACHILLES;

}