package dev.mr3.sb.repository;

/**
 * Data access placeholder for injury entities.
 * Keywords: repository, injury, persistence
 */
public class InjuryRepository {
}
