package dev.mr3.sb.repository;

/**
 * Data access placeholder for report entities.
 * Keywords: repository, report, persistence
 */
public class ReportRepository {
}
