package dev.mr3.sb.repository;

/**
 * Data access placeholder for treatment entities.
 * Keywords: repository, treatment, persistence
 */
public class TreatmentRepository {
}
