package dev.mr3.sb.service;

/**
 * Business logic placeholder for injury assessment and routing.
 * Keywords: service, injury, assessment
 */
public class InjuryService {
}
