package dev.mr3.sb.service;

/**
 * Business logic placeholder for report creation and retrieval.
 * Keywords: service, report, generation
 */
public class ReportService {
}
