@startuml InjuryAssist_Complete
skinparam monochrome true
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam ranksep 80
skinparam nodesep 50
title Injury Assist System — Complete Architecture

' ─────────────────────────────────────────
' ENUMS
' ─────────────────────────────────────────
enum BodyPart {
  THIGH, HAMSTRING, CALF, ANKLE
  KNEE, FOOT, SHIN, ARM, LEG
  WRIST, SHOULDER, ELBOW, ACHILLES
}

enum Weekday {
  SATURDAY, SUNDAY, MONDAY
  TUESDAY, WEDNESDAY, THURSDAY
  FRIDAY
}

enum AppointmentStatus {
  PENDING
  CONFIRMED
  COMPLETED
  CANCELLED
}

enum Gender {
  MALE
  FEMALE
}

' ─────────────────────────────────────────
' MODEL LAYER
' ─────────────────────────────────────────
package "dev.mr3.sb.model" {

  abstract class Person {
    # id         : Long
    # name       : String
    # age        : int
    # gender     : Gender
    # contact_no : String
    # address    : String
  }

  class Patient {
    - username : String
    - password : String
  }

  abstract class Doctor {
    # isAvailable      : boolean
  }

  class GeneralDoctor {
    - clinicRoomNumber : String
    + provideAdvice(injury : Injury) : String
  }

  class SpecializedDoctor {
    - specialty          : String
    - certificationLevel : String
    + performAssessment(injury : Injury) : String
  }

  class Injury {
    - id                 : Long
    - type               : String
    - movable            : boolean
    - athleteDescription : String
  }

  class Appointment {
    - id     : Long
    - time   : String
  }

  class Report {
    - id : Long
  }

  class Treatment {
    - id                  : Long
    - injuryType          : String
    - treatmentSuggestion : String
  }

  ' Inheritance
  Person <|-- Patient
  Person <|-- Doctor
  Doctor <|-- GeneralDoctor
  Doctor <|-- SpecializedDoctor

  ' Relationships
  Patient      "1" *-- "0..*" Injury      : injuries
  Patient      "1" *-- "0..*" Appointment : reservations
  Appointment  "0..*" --> "1" Doctor      : assigned to
  Report       "1" --> "1" Appointment    : appointment
  Injury       --> BodyPart               : bodyPart
  Appointment  --> AppointmentStatus      : status
  Appointment  --> Weekday                : weekday
}

' ─────────────────────────────────────────
' REPOSITORY LAYER
' ─────────────────────────────────────────
package "dev.mr3.sb.repository" {
  interface PatientRepository
  interface InjuryRepository
  interface DoctorRepository
  interface AppointmentRepository
  interface ReportRepository
  interface TreatmentRepository
}

' ─────────────────────────────────────────
' SERVICE LAYER
' ─────────────────────────────────────────
package "dev.mr3.sb.service" {

  class AuthService {
    - patientRepo : PatientRepository
    + validateLogin(patient : Patient) : boolean
    + register(patient : Patient) : void
  }

  class DoctorService {
    - doctorRepo : DoctorRepository
    + findAllDoctors() : List<Doctor>
    + findBySpecialty(specialty : String) : List<Doctor>
    + saveDoctor(doctor : Doctor) : Doctor
  }

  class InjuryService {
    - injuryRepo : InjuryRepository
    + processAssessment(injury : Injury) : String
    - checkCriticality(injury : Injury) : boolean
  }

  class AppointmentService {
    - appointmentRepo : AppointmentRepository
    - doctorRepo      : DoctorRepository
    + getAvailableSlots() : List<Appointment>
    + book(patientId : Long, doctorId : Long) : Appointment
  }

  class ReportService {
    - reportRepo : ReportRepository
    + generate(appointment : Appointment) : Report
    + getByAppointmentId(id : Long) : Report
  }

  class TreatmentService {
    - treatmentRepo : TreatmentRepository
    + getTreatment(injuryName : String) : Treatment
  }

  AppointmentService --> ReportService : triggers after booking
}

' ─────────────────────────────────────────
' CONTROLLER LAYER
' ─────────────────────────────────────────
package "dev.mr3.sb.controller" {

  class AuthController {
    - authService : AuthService
    + loginPage()  : String
    + login()      : String
    + signup()     : String
    + logout()     : String
  }

  class DoctorController {
    - doctorService : DoctorService
    + listDoctors()   : String
    + getDoctor()     : String
    + createDoctor()  : String
  }

  class InjuryController {
    - injuryService : InjuryService
    + showForm()        : String
    + submitInjury()    : String
  }

  class AppointmentController {
    - appointmentService : AppointmentService
    + showSlots()        : String
    + book()             : String
  }

  class ReportController {
    - reportService : ReportService
    + viewReport(appointmentId : Long) : String
  }
}

' ─────────────────────────────────────────
' CONFIGURATION LAYER
' ─────────────────────────────────────────
package "dev.mr3.sb.config" {
  class SecurityConfig {
    + filterChain() : SecurityFilterChain
  }
  class CustomUserDetailsService {
    + loadUserByUsername() : UserDetails
  }
  class DataInitializer {
    + run() : void
  }
}

' ─────────────────────────────────────────
' UI TEMPLATES
' ─────────────────────────────────────────
package "templates" {
  class "Login.html"          as T1 <<Boundary>>
  class "SignUp.html"         as T2 <<Boundary>>
  class "SelectInjury.html"   as T3 <<Boundary>>
  class "Dashboard.html"      as T4 <<Boundary>>
  class "Appointment.html"    as T5 <<Boundary>>
  class "Reports.html"        as T6 <<Boundary>>
  class "doctor-list.html"    as T7 <<Boundary>>
}

' ─────────────────────────────────────────
' WIRING — UI to Controllers
' ─────────────────────────────────────────
T1 ..> AuthController        : POST /login
T2 ..> AuthController        : POST /signup
T3 ..> InjuryController      : POST /injury
T4 ..> AppointmentController : GET /dashboard
T5 ..> AppointmentController : POST /appointment
T6 ..> ReportController      : GET /reports
T7 ..> DoctorController      : GET /doctors

' ─────────────────────────────────────────
' WIRING — Controllers to Services
' ─────────────────────────────────────────
AuthController        --> AuthService
DoctorController      --> DoctorService
InjuryController      --> InjuryService
AppointmentController --> AppointmentService
ReportController      --> ReportService

' ─────────────────────────────────────────
' WIRING — Services to Repositories
' ─────────────────────────────────────────
AuthService        --> PatientRepository
DoctorService      --> DoctorRepository
InjuryService      --> InjuryRepository
AppointmentService --> AppointmentRepository
AppointmentService --> DoctorRepository
ReportService      --> ReportRepository
TreatmentService   --> TreatmentRepository

' ─────────────────────────────────────────
' WIRING — Repositories to Entities
' ─────────────────────────────────────────
PatientRepository     ..> Patient
DoctorRepository      ..> Doctor
InjuryRepository      ..> Injury
AppointmentRepository ..> Appointment
ReportRepository      ..> Report
TreatmentRepository   ..> Treatment

@enduml